--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-	<string name="app_name">Java To Kotlin Demo</string>
+	<string name="app_name">GitHub Search</string>
 
 	<string name="drawer_open">Open</string>
 	<string name="drawer_close">Close</string>
